# embeddy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs
src/cli/: mod.rs
src/embedder/: mod.rs
src/model/: downloader.rs  mod.rs  registry.rs
src/server/: mod.rs
