[package]
name = "embeddy"
version = "0.1.0"
edition = "2021"
authors = ["Embeddy Contributors"]
description = "A lightweight, embeddings-only model runtime with CLI and HTTP API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/embeddy/embeddy"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP Server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Model download and caching
hf-hub = "0.4"

# ML/Embeddings runtime
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
directories = "5.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
